[2.2.0] Tests reinforced and updated
[2.2.0]
ArangoConfigurationAuthTests config test reordered

[2.2.0]
ArangoSSLContextTests tests coverage improved

[2.2.0]
ArangoSSLContextTests tests coverage improved